# toddcox-visualize

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  embed.cmake  entt-question.md  gldebug.hpp  groups.cpp  groups.h  main.cpp  meshlib.hpp  solver.cpp  test.cpp
cmake/: embed.cmake
example/: CMakeLists.txt  bench.cpp  path.cpp
examples/: CMakeLists.txt  geomtest.cpp  memotest.cpp  subtest.cpp
ext/: entt.cmake  glfw.cmake  gtest.cmake  imgui.cmake  peglib.cmake
include/: combo.hpp  cosets.h  groups.h  mirror.hpp  solver.h  solver.hpp
include/geo/: geometry.hpp  mirror.hpp
include/ml/: meshlib.hpp  meshlib_json.hpp
include/tc/: groups.h  solver.h
res/shaders/: 4d.vert.glsl  main.frag.glsl  main.vert.glsl
src/: cosets.cpp  geometrytest.cpp  groups.cpp  main.cpp  serialtest.cpp  solver.cpp  tctest.cpp
src/gl/: buffer.hpp  types.hpp
tc/: CMakeLists.txt
tc/bench/: CMakeLists.txt  benchmark.cpp  named.cpp
tc/include/tc/: core.hpp  cosets.h  cosets.hpp  group.hpp  groups.h  groups.hpp  pair_map.hpp  util.hpp
tc/src/: core.cpp  cosets.cpp  group.cpp  groups.cpp  keep.cpp  lang.cpp  langtest.cpp  pegtest.cpp  solve.cpp
tc/test/: CMakeLists.txt  grouptest.cpp  tctest.cpp  test_lang.cpp  test_pair_map.cpp  test_solve.cpp  test_solve_speed.cpp
vis/: CMakeLists.txt
vis/include/: combinations.hpp  combo_iterator.hpp  geom.h  geometry.hpp  mirror.hpp  rendering.hpp  solver.hpp  util.hpp
vis/include/cgl/: buffer.hpp  debug.hpp  error.hpp  pipeline.hpp  program.hpp  render.hpp  shader.hpp  shaderprogram.hpp  vertexarray.hpp
vis/include/geo/: mirror.hpp  solver.hpp
vis/include/gl/: buffer.hpp  debug.hpp  shader.hpp  types.hpp  vertexarray.hpp
vis/presets/: atlas_24_cell.yaml  b_3_ortho.yaml  b_3_stereo.yaml  b_4_ortho.yaml  b_4_stereo.yaml  b_4_stereo_exclude.yaml  b_4_stereo_exclude_nowire.yaml  b_4_stereo_exclude_thick.yaml  default.yaml  f_4_stereo.yaml  h_4_stereo.yaml  h_4_stereo_exclude_thick.yaml  h_4_stereo_wire.yaml
vis/res/shaders/: 4d.vert.glsl  main.frag.glsl  main.vert.glsl
vis/shaders/: CMakeLists.txt  curve-ortho.gm.glsl  curve-stereo.gm.glsl  deferred.vs.glsl  diffuse.fs.glsl  direct-ortho.vs.glsl  direct-stereo.vs.glsl  one-color.fs.glsl  ortho.vs.glsl  slice.gm.glsl  solid.fs.glsl  stereo-proper.gm.glsl  stereo-proper.vs.glsl  stereo.vs.glsl  w-axis-hue.fs.glsl
vis/shaders/4d/: 4d.gm.glsl  4d.vs.glsl
vis/shaders/slice/: deferred.vs.glsl  slice.gm.glsl
vis/shaders/test/: direct.glsl  white.glsl
vis/src/: combotest.cpp  components.hpp  comps.hpp  debug.hpp  geometrytest.cpp  main-gui.cpp  main.cpp  serialtest.cpp  systems.hpp  test.cpp
vis/src/render/: pointrender.hpp
