function(add_simple_test exec arg)
    add_test(NAME "${exec}_${arg}" COMMAND ${exec} ${arg})
    set_tests_properties("${exec}_${arg}" PROPERTIES TIMEOUT 5)
endfunction()

add_executable(test_pair_map test_pair_map.cpp)
target_link_libraries(test_pair_map PUBLIC tc)
add_simple_test(test_pair_map populate)
add_simple_test(test_pair_map symmetry)
add_simple_test(test_pair_map fill)
add_simple_test(test_pair_map copy)
add_simple_test(test_pair_map move)
add_simple_test(test_pair_map iterate)
add_simple_test(test_pair_map iterate_ref)
add_simple_test(test_pair_map view)

add_executable(test_solve test_solve.cpp)
target_link_libraries(test_solve PUBLIC tc)
add_simple_test(test_solve A)
add_simple_test(test_solve B)
add_simple_test(test_solve D)
add_simple_test(test_solve E)
add_simple_test(test_solve F)
add_simple_test(test_solve G)
add_simple_test(test_solve H)
add_simple_test(test_solve I)
add_simple_test(test_solve T)
add_simple_test(test_solve X)
